gitops/python-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-deployment
  namespace: python-namespace
  labels:
    app: my-python-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-python-app
  template:
    metadata:
      labels:
        app: my-python-app
    spec:
      containers:
      - name: my-python-app
        image: flask-app:latest
        ports:
          - containerPort: 5000
