gitops/python-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-service
  namespace: python-namespace
  labels:
    app: my-python-app
spec:
  type: NodePort
  ports:
  - port: 6000
    targetPort: 5000
  selector:
    app: my-python-app
